--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint --fix",
+    "e2e": "jest --testPathPattern=./e2e/",
     "test": "jest --testPathPattern=./src/",
     "coverage": "jest --testPathPattern=./src/ --coverage",
     "doc": "jsdoc -c jsdoc.conf.json",
@@ -35,6 +36,7 @@
     "lint": "^0.7.0",
     "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.6.1",
+    "puppeteer": "^19.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
